# terminal_chess

./: .gitignore  AAATODO.md  Bishop.cpp  Bishop.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessPiece  ChessPiece.cpp  ChessPiece.h  Dummy.cpp  Dummy.h  Enums.h  Exceptions.h  HOW_TO_DEBUG.md  King.cpp  King.h  Knight.cpp  Knight.h  LICENSE  Pawn.cpp  Pawn.h  ProvaPcVcPc.txt  Queen.cpp  Queen.h  README.md  Replay.cpp  TestPcVsPcV2.txt  TestPcVsPcV3.txt  Tower.cpp  Tower.h  a.out  deleRightLog.sh  gen_boards.sh  main.cpp  prova  prova.cpp  seeall.sh  testHumanVsPc.txt  testMosseSpeciali.txt  (+1 more)
code/: Replay.cpp  main.cpp
code/header/chessboard/: ChessBoard.h
code/header/game/: Game.h  HumanPlayer.h  PcPlayer.h  Player.h
code/header/pieces/: Bishop.h  ChessPiece.h  DirectionalPieces.h  Dummy.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  Tower.h
code/header/utilities/: Enums.h  Exceptions.h  Log.h  ManagePosition.h
code/src/chessboard/: ChessBoard.cpp  checks.cpp  specialMoves.cpp  utilityChessBoard.cpp
code/src/game/: Game.cpp  HumanPlayer.cpp  PcPlayer.cpp  Player.cpp
code/src/pieces/: Bishop.cpp  ChessPiece.cpp  DirectionalPieces.cpp  Dummy.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  Tower.cpp
code/src/utilities/: Log.cpp  ManagePosition.cpp
src/: CMakeLists.txt  Replay.cpp
src/header/: Bishop.h  ChessBoard.h  ChessPiece.h  DirectionalPieces.h  Dummy.h  Enums.h  Exceptions.h  Game.h  HumanPlayer.h  King.h  Knight.h  Log.h  Pawn.h  PcPlayer.h  Player.h  Queen.h  Tower.h
src/implementation/: Bishop.cpp  ChessBoard.cpp  ChessPiece.cpp  DirectionalPieces.cpp  Dummy.cpp  Game.cpp  HumanPlayer.cpp  King.cpp  Knight.cpp  Log.cpp  ManagePosition.cpp  Pawn.cpp  PcPlayer.cpp  Player.cpp  Queen.cpp  Tower.cpp  checks.cpp  specialMoves.cpp  utilityChessBoard.cpp
